Run tests with jdk17